data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4088.wast
;; 7. **Missing Operand Stack Test**:    - **Description**: Invoke `call_indirect` without sufficient operands on the stack, resulting in a stack underflow trap.    - **Constraint**: Ensure operand stack requirements are met.    - **Unreachable Code**: The forced trap prevents further code reaching the 'unreachable' instruction.

(assert_invalid
  (module
    (type (func))
    (table 1 funcref)
    (func $missing-operand-stack
      (call_indirect (type 0) (i32.const 1))
    )
  )
  "type mismatch"
)